# dobot

./: .dobot_history  .dockerignore  .env.example  .gitignore  .gitmodules  API.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  ISSUES.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART-ROS.md  QUICKSTART.md  README-ROS.md  README.md  VISION.md  VLA.md  dobot-cr.sh  dobot-driver.sh  dobot-shell.sh  dobot.sh  dobot_config.yaml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  startup.sh
DHGrip_v2-1-4-stable/: MqttRobot.lua  daemon.lua  dhGlobalUtil.lua  dhLanguage.lua  dobotLock485.lua  httpAPI.lua  userAPI.lua
DHGrip_v2-1-4-stable/Blocks/: config.json
DHGrip_v2-1-4-stable/Main/: config.json  index.html
DHGrip_v2-1-4-stable/Resources/i18n/Deutsch/: config.json  scripts.json
DHGrip_v2-1-4-stable/Resources/i18n/English/: blocks.json  config.json  scripts.json
DHGrip_v2-1-4-stable/Resources/i18n/Español/: blocks.json  (+2 more)
DHGrip_v2-1-4-stable/Scripts/: config.json
dobot-ros/: package.xml  setup.cfg  setup.py
dobot-ros/config/: dobot_config.yaml
dobot-ros/dobot_ros/: __init__.py  cli.py  config.py  driver.py  gripper_node.py  pick.py  ros_client.py  shell.py  validation.py  vision.py  vision_transform.py
dobot-ros/dobot_ros/servo/: __init__.py  patterns.py  tester.py
dobot-ros/dobot_ros/spacemouse/: __init__.py  device.py  hid_state.py  reader.py
dobot-ros/dobot_ros/strategies/: __init__.py  angled_approach.py  base.py  servo_top_down.py  simple_top_down.py
dobot-ros/dobot_ros/vla/: __init__.py  client.py  executor.py  recorder.py  rlds_builder.py  safety.py  types.py
dobot-ros/dobot_ros/web/: camera_state.json  pick_confirm.py  server.py  settings_store.py  table_plane.json
dobot_actions/: CMakeLists.txt  package.xml
dobot_actions/action/: Gripper.action  MoveCartesian.action  MoveJoints.action
dobot_actions/launch/: actions.launch.py
dobot_actions/scripts/: gripper_server.py  move_cartesian_server.py  move_joints_server.py
dobot_cr/: __init__.py  __main__.py  cli.py  config.py  robot.py  shell.py
docker/: Dockerfile  entrypoint.sh  fastrtps_profile.xml
docs/: spacemouse-bringup.md
docs/superpowers/plans/: 2026-04-17-spacemouse-pendant.md
docs/superpowers/specs/: 2026-04-17-spacemouse-pendant-design.md
examples/: advanced_control.py  basic_usage.py  jog_example.py  shell_demo.md
oft-server/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  mock_server.py  requirements.txt  server.py
scripts/: dev_setup.sh  install.sh
tests/servo/: README.md  conftest.py  test_patterns.py  test_tester.py  test_tester_edge_cases.py  test_tester_velocity_cap.py  test_tester_velocity_mode.py
tests/settings/: test_settings_edge_cases.py  test_settings_store.py
tests/spacemouse/: conftest.py  test_device.py  test_hid_state.py  test_reader_decode.py  test_reader_integration.py
tests/vision/: test_vision_edge_cases.py  test_vision_transform.py
tests/vla/: README.md  conftest.py  test_executor.py  test_executor_edge_cases.py  test_mock_server.py  test_recorder.py  test_rlds_builder.py  test_ros_client_validation.py  test_safety.py  test_safety_edge_cases.py  test_strategies.py
(+37 files in other folders)
